crates/engine/tests/snapshots/lint_pipeline__e001_diagnostic_json.snap
---
source: crates/engine/tests/lint_pipeline.rs
expression: json
---
[
  {
    "citation": "CAPCO-2016 §A.6",
    "fix": {
      "confidence": 1.0,
      "migration_ref": null,
      "replacement": "NOFORN",
      "source": "BuiltinRule"
    },
    "message": "banner uses abbreviated dissem control \"NF\"; use \"NOFORN\"",
    "rule": "E001",
    "severity": "fix",
    "span": {
      "end": 18,
      "start": 16
    }
  }
]
