crates/engine/tests/snapshots/lint_pipeline__e008_diagnostic_json.snap
---
source: crates/engine/tests/lint_pipeline.rs
expression: json
---
[
  {
    "citation": "CAPCO-2016 §G.1 (Register of Authorized Markings, p36)",
    "fix": null,
    "message": "unrecognized token inside marking — does not match any known CAPCO classification, control, or trigraph",
    "rule": "E008",
    "severity": "error",
    "span": {
      "end": 13,
      "start": 8
    }
  }
]
